Correcion en entidades de la base de datos, se cambian models para reflejar esos cambios. Se agrega exception para EmailYaRegistradoException. ahora las respuestas tablas son traidas por el repository, mapeando correctamente su dependecia a fila columna y tabla. Se agregan interfaces para los services